<resources>
    <string name="app_name">Фильмопоиск</string>
    <string name="search_validation_message">Строка поиска должна содержать не менее 3 символов.</string>
    <string name="search_nofound_message">Ничего не найдено, попробуйте изменить строку поиска.</string>
    <string name="details_error_message">Ошибка чтения информации о фильме.</string>
    <string name="genres">Жанры</string>
    <string name="countries">Страны</string>
    <string name="back_button_description">Вернуться</string>
    <string name="movie_poster">Плакат фильма</string>
    <string name="go_to_homepage_button_message">На страницу</string>
    <string name="share_using">Поделиться</string>
    <string name="casts">Актеры</string>
    <string name="crew">Команда</string>
</resources>
